package org.hotel;

import lombok.Getter;

@Getter

public class MidRoom extends Room{
    public MidRoom(boolean hasAC) {
        super(hasAC);
    }
}
